@@ -21,11 +21,11 @@
 </head>
 <body>
     {CUSTOM_HEADER}
-    <div id="cpg_header_block_outer">
-		<div class="cpg_header_block_inner" style="border-bottom:1px solid white">
+    <div id="cpg_logo_block_outer">
+		<div class="cpg_logo_block_inner">
 			<div id="cpg_header_block_logo">
 				<a href="index.php">
-					<img src="themes/coppermine/images/coppermine-logo.png" border="0" width="252" height="52" alt="" />
+					<img src="themes/coppermine/images/coppermine-logo.png" border="0" width="260" height="60" alt="" />
 				</a>
 			</div>
 			<div id="cpg_header_block_name">
@@ -33,6 +33,10 @@
 				<h3>{GAL_DESCRIPTION}</h3>
 			</div>
 			<div class="clearer"></div>
+		</div>
+	</div>
+    <div id="cpg_header_block_outer">
+		<div class="cpg_header_block_inner" style="border-bottom:1px solid white">
 			<div id="main_menu">
 				<ul class="dropmenu">
 					{SYS_MENU}
